--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" lang="pl" >
   <title>Motyli.pl</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +12,8 @@
   <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <app-root></app-root>
+
+  <app-root class="mat-app-background flex-vertical"></app-root>
+  
 </body>
 </html>
